<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ChangePaymentMethodConfirmationFragment">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/dimen_15dp"
        android:paddingVertical="@dimen/dimen_20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hydrogen_logo"
            android:src="@drawable/hydrogen_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dismiss"
            android:src="@drawable/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:src="@drawable/please_confirm_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView36"
            style="@style/heading_exo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_60dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:fontFamily="@font/exo_medium"
            android:text="@string/are_you_sure_you_want_to_switch_payment_options"
            android:textAlignment="center"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <TextView
            android:id="@+id/textView37"
            style="@style/sub_heading_poppins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:text="@string/click_yes_or_no"
            android:textAlignment="center"
            android:textColor="#797979"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintEnd_toEndOf="@+id/textView36"
            app:layout_constraintStart_toStartOf="@+id/textView36"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <android.widget.Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:background="@drawable/simple_btn_white_bg"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/no"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView37"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.widget.Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:background="@drawable/simple_btn_bg"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/yes"
            android:textColor="@color/hydrogen_yellow"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintEnd_toEndOf="@+id/textView37"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/button2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>