<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presentation.TransactionReceiptDetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/hydrogen_yellow"
            android:padding="@dimen/dimen_30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_40dp"
                android:contentDescription="@string/hydrogen_logo"
                android:src="@drawable/hydrogen_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:fontFamily="@font/exo_bold"
                android:gravity="top"
                android:text="@string/payment_successful"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6" />

            <TextView
                android:id="@+id/transaction_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/dimen_10sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                tools:text="12th Sep. 2023 | 12:23pm" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView20"
                    style="@style/heading_exo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_35dp"
                    android:text="@string/transaction_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView21"
                    style="@style/sub_heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_25dp"
                    android:text="@string/merchant"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView20"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" />

                <TextView
                    android:id="@+id/textView22"
                    style="@style/heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_20dp"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView21"
                    tools:text="Damilola groceries" />

                <View
                    android:id="@+id/horizontal_line_2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:background="@color/light_grey"
                    app:layout_constraintEnd_toEndOf="@+id/textView22"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/textView21" />

                <TextView
                    android:id="@+id/textView19"
                    style="@style/sub_heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/transaction_id"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/horizontal_line_2" />

                <TextView
                    android:id="@+id/textView23"
                    style="@style/heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView22"
                    app:layout_constraintTop_toTopOf="@+id/textView19"
                    tools:text="5635768926" />

                <View
                    android:id="@+id/horizontal_line_3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:background="@color/light_grey"
                    app:layout_constraintEnd_toEndOf="@+id/textView22"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <TextView
                    android:id="@+id/textView24"
                    style="@style/sub_heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/total_amount"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/horizontal_line_3" />

                <TextView
                    android:id="@+id/textView25"
                    style="@style/heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_in_naira_place_holder"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView22"
                    app:layout_constraintTop_toTopOf="@+id/textView24"
                    tools:text="₦ 35,000" />

                <View
                    android:id="@+id/horizontal_line_5"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:background="@color/light_grey"
                    app:layout_constraintEnd_toEndOf="@+id/textView22"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/textView24" />

                <TextView
                    android:id="@+id/textView26"
                    style="@style/sub_heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/description"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/horizontal_line_5" />

                <TextView
                    android:id="@+id/textView27"
                    style="@style/sub_heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView22"
                    app:layout_constraintTop_toTopOf="@+id/textView26"
                    tools:text="Description provided by merchant" />

                <View
                    android:id="@+id/horizontal_line_6"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:background="@color/light_grey"
                    app:layout_constraintEnd_toEndOf="@+id/textView22"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/textView26" />

                <TextView
                    android:id="@+id/textView28"
                    style="@style/heading_exo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_35dp"
                    android:text="@string/receiver_s_bank_information"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/horizontal_line_6" />


                <TextView
                    android:id="@+id/textView29"
                    style="@style/sub_heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_25dp"
                    android:text="@string/bank_name"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView20"
                    app:layout_constraintTop_toBottomOf="@+id/textView28" />

                <TextView
                    android:id="@+id/textView30"
                    style="@style/heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_20dp"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView29"
                    tools:text="Access Bank" />

                <View
                    android:id="@+id/horizontal_line_7"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:background="@color/light_grey"
                    app:layout_constraintEnd_toEndOf="@+id/textView22"
                    app:layout_constraintStart_toStartOf="@+id/textView29"
                    app:layout_constraintTop_toBottomOf="@+id/textView29" />

                <TextView
                    android:id="@+id/textView31"
                    style="@style/sub_heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/account_number"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView29"
                    app:layout_constraintTop_toBottomOf="@+id/horizontal_line_7" />

                <TextView
                    android:id="@+id/textView32"
                    style="@style/heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView30"
                    app:layout_constraintTop_toTopOf="@+id/textView31"
                    tools:text="5635768926" />

                <View
                    android:id="@+id/horizontal_line_8"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:background="@color/light_grey"
                    app:layout_constraintEnd_toEndOf="@+id/textView32"
                    app:layout_constraintStart_toStartOf="@+id/textView31"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />

                <TextView
                    android:id="@+id/textView33"
                    style="@style/sub_heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/account_name"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/horizontal_line_8" />

                <TextView
                    android:id="@+id/textView34"
                    style="@style/heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView32"
                    app:layout_constraintTop_toTopOf="@+id/textView33"
                    tools:text="Chinonso Briggs - HydrogenPay" />

                <View
                    android:id="@+id/horizontal_line_9"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_2dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:background="@color/light_grey"
                    app:layout_constraintEnd_toEndOf="@+id/textView34"
                    app:layout_constraintStart_toStartOf="@+id/textView33"
                    app:layout_constraintTop_toBottomOf="@+id/textView33" />

                <TextView
                    android:id="@+id/textView35"
                    style="@style/sub_heading_poppins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_45dp"
                    android:text="@string/a_copy_of_this_receipt_has_been_sent_your_email"
                    android:textSize="@dimen/dimen_12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/horizontal_line_9" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_2dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:contentDescription="@string/powered_by_hydrogen"
                    android:paddingHorizontal="0dp"
                    android:scaleType="fitStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView35"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/powered_by_hydrogen" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>